# mailcode

./: .gitignore  CLAUDE.md  LICENSE  README.en.md  README.md  build.sh  install.sh  prepare.sh  pyproject.toml  release.sh  requirements-dev.txt  uninstall.sh
.githooks/: pre-commit
.github/workflows/: release.yml
docs/design-final/: design.md
docs/references/: rust-rewrite-feasibility.md
docs/reports/: 2026-05-30-hang-logging-optimization-report.md  2026-05-31-config-fix-report.md  2026-05-31-default-agent-claude-report.md  2026-06-02-mailcode-doc-report.md  2026-06-03-conversation-mode-report.md  2026-06-03-mailcode-review-fix-report.md  2026-06-03-tmux-removal-report.md  2026-06-06-session-per-file-report.md  2026-06-06-stateless-fallback-report.md  2026-06-07-centralize-config-data-report.md  2026-06-13-schedule-report.md  2026-06-14-idle-health-check-report.md  2026-06-14-relay-log-fixes-report.md
mailcode/: cli.py  cli_chat.py  config.py  health.py  provider_presets.py  schedule_cli.py  server.py  session_cli.py
mailcode/channels/: __init__.py  email_channel.py
mailcode/relay/: __init__.py  conversation_handler.py  email_listener.py  resume_handler.py  scheduler.py  security.py  stateless_handler.py
mailcode/resources/: default.json
mailcode/utils/: __init__.py  claude_runner.py  logging.py
tests/: run_tests.sh
tests/unit/: conftest.py  test_auth_results.py  test_claude_runner.py  test_cli.py  test_cli_chat.py  test_config.py  test_conversation_handler.py  test_email_channel.py  test_health.py  test_listener_lifecycle.py  test_logging.py  (+5 more)
(+40 files in other folders)
